--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-reusable-autocomplete",
   "author": "Konrad Szałwiński",
   "license": "MIT",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A search box for React",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest --verbose --runInBand",
     "build": "rm -rf ./dist/*.* && babel ./src --out-dir ./dist --ignore **/*.test.js && minify ./dist/ --out-dir ./dist/",
+    "build:dev": "rm -rf ./dist/*.* && babel ./src --out-dir ./dist --ignore **/*.test.js",
     "build-watch": "rm -rf ./dist/*.* && babel ./src --out-dir ./dist --ignore **/*.test.js --watch && minify ./dist/ --out-dir ./dist/"
   },
   "repository": {
@@ -57,7 +58,8 @@
     "styled-components": "^4.4.1"
   },
   "peerDependencies": {
-    "react": "^16.14.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -65,14 +67,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "babel-minify": "^0.5.1",
-    "jest": "^26.6.3",
-    "jest-localstorage-mock": "^2.4.6",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-test-renderer": "^16.14.0"
+    "babel-minify": "^0.5.1"
   },
   "files": [
     "dist/*"
